Created projects page; Added blog post

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -79,6 +79,7 @@ img.emoji {
 <li class="page_item page-item-24 current_page_item"><a href="./index.html" aria-current="page"><span>About Me</span></a></li>
 <li class="page_item page-item-18"><a href="./../blog/index.html"><span>Blog</span></a></li>
 <li class="page_item page-item-8"><a href="./../projects/index.html"><span>Projects</span></a></li>
+<li class="page_item page-item-55"><a href="./../projects-detailed/index.html"><span>Projects Detailed</span></a></li>
 <li class="page_item page-item-2"><a href="./../sample-page/index.html"><span>Resume</span></a></li>
 </ul></div>					<div class="side-socials side-section">
 		<div class="widget-side-section-inner">
@@ -111,12 +112,11 @@ img.emoji {
 						</div>
 						
 						<nav id="access" aria-label="Top Menu" itemscope itemtype="http://schema.org/SiteNavigationElement">
-								<div><ul id="top-nav" class="top-nav">
-<li><a href="./../index.html"><span>Home</span></a></li>
-<li class="page_item page-item-24 current_page_item"><a href="./index.html" aria-current="page"><span>About Me</span></a></li>
-<li class="page_item page-item-18"><a href="./../blog/index.html"><span>Blog</span></a></li>
-<li class="page_item page-item-8"><a href="./../projects/index.html"><span>Projects</span></a></li>
-<li class="page_item page-item-2"><a href="./../sample-page/index.html"><span>Resume</span></a></li>
+								<div><ul id="top-nav" class="">
+<li id="menu-item-61" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-24 current_page_item menu-item-61"><a href="./index.html" aria-current="page"><span>About Me</span></a></li>
+<li id="menu-item-62" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-62"><a href="./../projects/index.html"><span>Projects</span></a></li>
+<li id="menu-item-66" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-66"><a href="./../blog/index.html"><span>Blog</span></a></li>
+<li id="menu-item-63" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-63"><a href="./../sample-page/index.html"><span>Resume</span></a></li>
 </ul></div>						</nav><!-- #access -->
 
 
